--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
+    "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "jquery": "^3.5.1",
-    "jsdom": "^16.3.0",
+    "jsdom": "^16.7.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.25"
+    "mongodb": "^5.2.0",
+    "mongoose": "^5.13.17",
+    "nodemon": "^2.0.22"
   }
 }
